parser/sample_tests/ours/simple.txt

*** Error line 1.
void main() {
         ^
*** syntax error

